--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
 		"esModuleInterop": true,
 		"downlevelIteration": true
 	},
-	"include": ["src"],
+	"include": ["src", "__tests__"],
 	"exclude": ["node_modules", "lib"]
 }
